k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api 
  ports:
  - port: 80 
    targetPort: 80
