k8s/base/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: api
  annotations:
    # kubernetes.io/ingress.global-static-ip-name: "stage-project-impossible-api"
    kubernetes.io/ingress.class: nginx

spec:
  rules:
  - host: ""
    http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: api 
            port: 
              number: 80 
        path: /*
